# cxadc-win

./: .editorconfig  .gitattributes  .gitmodules  README.md  cxadc-win.sln
.github/workflows/: build.yml  build_release.yml
cxadc-win/: common.h  control.c  control.h  cx2388x.c  cx2388x.h  cxadc-win.inf  cxadc-win.inx  cxadc-win.mof  cxadc-win.vcxproj  cxadc-win.vcxproj.filters  cxadc_win.c  cxadc_win.h  ioctl.c  ioctl.h  pch.c  pch.h  precomp.h  precompsrc.c  public.h  registry.c  registry.h  trace.h  wmi.c  wmi.h
cxadc-win-prop-page/: common.h  controls.c  controls.h  cxadc-win-prop-page.vcxproj  cxadc-win-prop-page.vcxproj.filters  device.h  pch.h  prop_page.def  prop_page.rc  resource.h  version.rc
cxadc-win-tool/: Clockgen.cs  Cxadc.cs  CxadcWin.cs  Ioctl.cs  NativeMethods.txt  Program.cs  cxadc-win-tool.csproj
shared/: cx_config.h  cx_ctl_codes.h  public.h  shared.vcxitems
src/capture-server/: CMakeLists.txt  LocalCapture.ps1  README.md  audio.h  audio_alsa.c  audio_wasapi.c  capture-server.vcxproj  capture-server.vcxproj.filters  common.h  files.c  files.h  http.c  http.h  local-capture.sh  main.c  network.h  ringbuffer.c  ringbuffer.h  version.h  version.rc
src/clockgen/: CMakeLists.txt  CMakePresets.json  CxadcClockGen.psm1  LICENSE  README.md
src/clockgen/firmware/: CMakeLists.txt  build_info.h  clock_gen.c  clock_gen.h  tusb_config.h  usb_audio.c  usb_audio_format.h  usb_descriptors.c  usb_descriptors.h  usb_vendor.c  usb_vendor.h
src/driver/: CxadcWin.psm1  common.h  control.c  control.h  cx2388x.c  cxadc-win.inx  cxadc-win.mof  cxadc-win.rc  cxadc_win.c  cxadc_win.h  driver.vcxproj  driver.vcxproj.filters  ioctl.c  ioctl.h  pch.h  registry.c  registry.h  trace.h  version.rc  wmi.c  wmi.h
(+36 files in other folders)
